<resources>
    <string name="app_name">Donut Town</string>
    <string name="donut_shop">Donut Shop</string>
    <string name="current_order">Current Order</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="quantity">Quantity</string>
    <string name="size">Size</string>
    <string name="sugar">Sugar</string>
    <string name="add_coffee">Add Coffee</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="cream">Cream</string>
    <string name="subtotal">SubTotal</string>
    <string name="store_order">Store Orders</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="add_donuts">Add Donuts</string>
    <string name="remove_donut">Remove Donut</string>
    <string name="textview">TextView</string>
    <string name="tax">tax</string>
    <string name="total">total</string>
    <string name="autofill">0.00</string>
    <string name="curr_activity_name">Your Current Order</string>
    <string name="dollars">0.00</string>
    <string name="place_order">Place Order</string>
    <string name="remove_order">Remove Order</string>
    <string name="order_details">Order Details</string>
    <string name="order_number">Order Number</string>
</resources>