<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/constraintLayout">

    <ListView
            android:layout_width="317dp"
            android:layout_height="350dp"
            android:id="@+id/orderList" android:visibility="visible"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp" android:layout_marginRight="44dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041"/>
    <TextView
            android:text="@string/tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tax"
            app:layout_constraintTop_toBottomOf="@+id/subtotal"
            android:layout_marginTop="36dp" app:layout_constraintEnd_toEndOf="@+id/subtotal"/>
    <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/total"
            app:layout_constraintTop_toBottomOf="@+id/tax"
            android:layout_marginTop="44dp" app:layout_constraintEnd_toStartOf="@+id/totalNumber"
            android:layout_marginEnd="12dp" android:layout_marginRight="12dp"/>
    <EditText
            android:layout_width="71dp"
            android:layout_height="41dp"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/subtotalNumber"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="256dp" android:layout_marginRight="256dp"
            app:layout_constraintTop_toBottomOf="@+id/orderList" android:layout_marginTop="32dp"
            android:autofillHints="" android:hint="@string/autofill" android:editable="false"
            android:clickable="false" android:cursorVisible="false"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/subtotal"
            app:layout_constraintEnd_toStartOf="@+id/subtotalNumber"
            android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
            app:layout_constraintTop_toBottomOf="@+id/orderList" android:layout_marginTop="32dp"/>
    <EditText
            android:layout_width="71dp"
            android:layout_height="41dp"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/totalNumber"
            app:layout_constraintStart_toStartOf="@+id/taxNumber" app:layout_constraintTop_toTopOf="@+id/total"
            android:hint="@string/autofill" android:autofillHints="" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:textSize="18sp" android:editable="false"
            android:clickable="false"/>
    <EditText
            android:layout_width="71dp"
            android:layout_height="41dp"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/taxNumber"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/tax" app:layout_constraintTop_toBottomOf="@+id/subtotalNumber"
            android:layout_marginTop="16dp" android:hint="@string/autofill" android:autofillHints=""
            android:textSize="18sp" android:editable="false" android:clickable="false" android:cursorVisible="false"/>
    <Button
            android:text="@string/place_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/placeOrder"
            app:layout_constraintStart_toEndOf="@+id/taxNumber" android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp" app:layout_constraintTop_toBottomOf="@+id/orderList"
            android:layout_marginTop="88dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>