<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="#00000000">

    <TextView
            android:text="@string/order_donuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textSize="30sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="116dp" android:layout_marginStart="116dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.107"/>
    <ListView
            android:layout_width="205dp"
            android:layout_height="324dp"
            android:id="@+id/donutList" android:layout_marginTop="112dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <Spinner
            android:layout_width="187dp"
            android:layout_height="22dp" android:id="@+id/flavorList"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="196dp" app:layout_constraintStart_toStartOf="@+id/textView7"
            android:entries="@array/flavors" android:spinnerMode="dropdown"/>
    <Spinner
            android:layout_width="157dp"
            android:layout_height="22dp" android:id="@+id/quantSpinner"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/addDonuts" app:layout_constraintHorizontal_bias="0.0"
            android:entries="@array/spinnerValues"/>
    <Button
            android:text="@string/remove_donut"
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/removeDonut"
            app:layout_constraintStart_toStartOf="@+id/addDonuts" app:layout_constraintTop_toBottomOf="@+id/addDonuts"
            android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/order_donuts"
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/orderDonuts"
            app:layout_constraintStart_toStartOf="@+id/removeDonut"
            app:layout_constraintTop_toBottomOf="@+id/removeDonut" android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/add_donuts"
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/addDonuts"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="312dp"/>
    <TextView
            android:text="@string/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/quantSpinner" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/flavorList" android:layout_marginTop="8dp"/>
    <TextView
            android:text="Flavors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/flavorList" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>